--- a/land/templates/land/home.html
+++ b/land/templates/land/home.html
@@ -111,5 +111,18 @@
       </div>
     </div>
   </div>
+  <div class="col-md-4 mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Notion test</h5>
+        <p class="card-text">Testing for notion link.</p>
+        <a
+          href="https://escapebaek.notion.site/Brachial-Plexus-Block-1bc4d01a2aa648f09917278463b89ce2?pvs=25"
+          class="btn btn-primary"
+          >Go</a
+        >
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
