name change : ANExuS

--- a/land/templates/land/home.html
+++ b/land/templates/land/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block page_content %}
 <div class="jumbotron">
-  <h1 class="display-4">Welcome to ANESHUB</h1>
+  <h1 class="display-4">Welcome to ANExuS</h1>
   <p class="lead">
     Your one-stop solution for safe and precise anesthesia care.
   </p>
