--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url 'home' %}">ANESHUB</a>
+      <a class="navbar-brand" href="{% url 'home' %}">ANExuS</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
